--- a/txt/licencjat.tex
+++ b/txt/licencjat.tex
@@ -153,9 +153,9 @@ W dalszej części pracy szczegółowo zostanie opisane stanowisko pracy.
 W tym rozdziale zaprezentowano podstawowe twierdzenia oraz teorię leżącą u podstaw niniejszej pracy. Skupiono się na zagadnieniach związanych z przekształceniami geometrycznymi, algorytmami oceny podobieństwa strukturalnego oraz metodami lokalnego dopasowania (uliniawiania) struktur chemicznych.
 
 \section{Przekształcenia geometryczne}
-Przekształcenia geometryczne w przestrzeni trójwymiarowej stanowią jedne z elementarnych operacji często używanych w niniejszej pracy. Do podstawowych przekształceń zaliczamy między innymi skalowanie, translacje i rotacje. Wszystkie te operacje można praktycznie zrealizować na kilka sposobów. Z racji tego, że przekształcenia geometryczne operują na milionach punktów (pikseli) w przestrzeni trójwymiarowej, to optymalne metody numeryczne je realizujące są priorytetem i muszą w minimalnym stopniu obciążać komputerowe jednostki obliczeniowe. 
+Przekształcenia geometryczne w przestrzeni trójwymiarowej stanowią jedne z elementarnych operacji używanych w niniejszej pracy. Zaliczamy do nich przede wszystkim skalowanie, translacje i rotacje. Wszystkie te operacje można praktycznie zrealizować na kilka sposobów. Ze względu na to, że operują one na milionach punktów (pikseli) w przestrzeni trójwymiarowej, optymalne metody numeryczne które je realizują są priorytetem i muszą w minimalnym stopniu obciążać komputerowe jednostki obliczeniowe i procesory graficzne. 
 
-Współpraca bibliotek programistycznych (pochodzących od różnych dostawców) może wymagać konwersji pomiędzy różnymi formatami zapisu transformacji. Szczególna uwagę należy zwrócić na konwersję orientacji wskaźnika z formatu zwracanego przez bibliotekę VRPN (kwaterniony) na format akceptowany przez PyMOL (macierze rotacji) i odwrotnie. Ten aspekt zostanie omówiony w dalszej części pracy.
+Współpraca bibliotek programistycznych pochodzących od różnych dostawców może wymagać konwersji pomiędzy różnymi formatami zapisu transformacji. Szczególna uwagę należy zwrócić na konwersję orientacji wskaźnika z formatu dostarczonego przez bibliotekę VRPN (kwaterniony) na format akceptowany przez PyMOL (macierze rotacji) i odwrotnie. Ten aspekt zostanie omówiony w dalszej części pracy.
 
 Ogólną postać przekształceń geometrycznych możemy zdefiniować jako:
 $$
@@ -165,9 +165,9 @@ $$
 gdzie:
 \\
 
-$\vec{P'}$ jest wektorem współrzędnych punktu $[x',y',z']^T$ po dokonanych transformacjach
+$\vec{P}$ jest wektorem $\begin{bmatrix} x \\y \\z \\ \end{bmatrix}$ współrzędnych punktu poddanego transformacjom
 
-$\vec{P}$ jest wektorem współrzędnych punktu $[x,y,z]^T$ poddanego transformacjom
+$\vec{P'}$ jest wektorem $\begin{bmatrix} x'\\ y'\\ z' \end{bmatrix} $ współrzędnych punktu $\vec{P}$ po dokonanych transformacjach
 
 $S$ reprezentuje operację skalowania
 
@@ -176,7 +176,45 @@ $R$ reprezentuje operację rotacji
 $T$ reprezentuje operację translacji
 \\
 
-Z uwagi na konieczność dostosowania transformacji do wykonywania na współczesnych komputerach opracowano efektywne reprezentacje tych operacji. 
+Z uwagi na konieczność dostosowania transformacji do wykonywania ich na współczesnych komputerach niezbędne było opracowanie efektywnych obliczeniowo reprezentacji tych operacji. Bezpośrednia implementacja tych przekształceń byłaby dość kłopotliwa gdyż nie dość, że każda z nich musiałaby zostać wykonana oddzielnie, to przede wszystkim nie byłoby to optymalne obliczeniowo rozwiązanie. Do tego celu wybrano ujednolicone narzędzie rozwiązujące powyższe problemy: \textit{przekształcenia macierzowe} i \textit{współrzędne jednorodne}.
+
+\textit{Przekształcenia macierzowe} stanowią łatwy i jednolity sposób posługiwania się wszystkimi rodzajami transformacji. Każdą z powyższych operacji można opisać jako elementarne operacje na macierzach (dodawanie lub mnożenie) modyfikujące zbiór punktów w przestrzeni (który również jest reprezentowany jako macierz). Macierze przekształceń powstały przede wszystkim z myślą o implementacji na współczesnych komputerach, które bardzo dobrze radzą sobie z obliczeniami macierzowymi. Istnieją dziesiątki rozmaitych bibliotek wspomagających tego typu kalkulacje, ponadto operacje macierzowe można łatwo zrównoleglać i optymalizować.
+
+
+Często także pojawia się sytuacja w której przekształcenia geometryczne są wykonywane jednocześnie. Można sobie wyobrazić sytuację w której obiekt przestrzenny należy przesunąć jednocześnie dokonując obrotu. 
+
+\textit{Współrzędne jednorodne} stanowią pewne rozszerzenie macierzy przekształceń umożliwiające wykonywanie wielu transformacji jednocześnie - za pomocą jednej operacji macierzowej, zwykle mnożenia. Współrzędne jednorodne zostaną szczegółowo opisane w dalszej części pracy.
+
+Współrzędne jednorodne są sposobem reprezentacji punktów przestrzeni $n$-wymiarowej za pomocą układu $n+1$ współrzędnych. Zostały one wprowadzone przez niemieckiego matematyka Augusta Möbiusa w 1827 roku i opisane w jego pracy Der barycentrische Calcul. Möbius zauważył, że nie jest możliwe przedstawienie wszystkich transformacji geometrycznych za pomocą elementarnych macierzy transformacji. Aby rozwiązać ten problem opracowano właśnie współrzędne jednorodne. Zostały one docenione w dzisiejszych czasach szczególnie przez programistów grafiki komputerowej, gdyż same stanowią łatwe w implementacji narzędzie transformacji geometrycznych.
+\\
+\\
+Elementarna rotacja jest rotacją danego punktu wokół jednej z osi układu współrzędnych ($X$, $Y$ lub $Z$).
+$$
+A=\begin{bmatrix}
+s & d & f \\
+u & j & k
+\end{bmatrix}
+$$
+
+
+$$
+T=\begin{bmatrix}
+t_x \\
+t_y \\
+t_z
+\end{bmatrix}
+$$
+
+Przykładowo mając dany wektor współrzędnych $\vec{X}$ opisujący położenie punktu w przestrzeni trójwymiarowej:
+
+$$
+\vec{X}=\begin{bmatrix}
+x \\
+y \\
+z
+\end{bmatrix}
+$$
+możemy zdefiniowac macierz $T(a,b,c)$:
 
 \subsection{Skalowanie}
 Skalowanie to operacja polegająca na mnożeniu wszystkich współrzędnych obiektu określonego w przestrzeni trójwymiarowej przez dodatnią liczbę rzeczywistą $S$ albo dodatnio określony wektor $\vec{S}$ stanowiące współczynniki skalowania. W ogólności możemy skalować wszystkie składowe wektora współrzędnych niezależnie przez stosowanie wektora o różnych współczynnikach jednak dla potrzeb niniejszej pracy wystarczy, że wykonywane skalowanie będzie operacją mnożenia wektora współrzędnych przez skalar $S$.
@@ -199,6 +237,41 @@ z'=z*S_z
 \end{array}
 $$
 
+Reprezentacja skalowania za pomocą elementarnych macierzy przekształceń polega na stworzeniu takiej macierzy $S$, że wektor skalujący $\vec{S}$ zostanie wpisany do niej w następujący sposób:
+$$
+\hat{S}=
+\begin{bmatrix}
+S_x & 0 & 0 \\
+0 & S_y & 0 \\
+0 & 0 & S_z
+\end{bmatrix}
+$$
+zatem:
+$$
+\vec{P'}=\hat{S}*\vec{P}
+$$
+
+$$
+\vec{P'}
+=
+\begin{bmatrix}
+S_x & 0 & 0 \\
+0 & S_y & 0 \\
+0 & 0 & S_z
+\end{bmatrix}
+*
+\begin{bmatrix} 
+x \\ 
+y \\ 
+z 
+\end{bmatrix} 
+=
+\begin{bmatrix} 
+x*S_x \\ 
+y*S_y \\ 
+z*S_z 
+\end{bmatrix}
+$$
 \subsection{Translacje}
 W geometrii euklidesowej translacją nazywamy takie przekształcenie geometryczne, które przenosi każdy punkt określony w przestrzeni o dowolny wektor $\vec{T}$. Translacje (przesunięcia) to kolejna elementarna operacja przekształcenia geometrycznego. W odróżnieniu od skalowania, w przypadku przesunięć w przestrzeni do wektora współrzędnych dodajemy wektor współczynników (liczb rzeczywistych) przesunięcia $\vec{T}$:
 $$
@@ -213,8 +286,34 @@ y'=y+T_y \\
 z'=z+T_z
 \end{array}
 $$
+
+Reprezentacja macierzowa takiego zapisu, w odróżnieniu od skalowania może być przedstawiona jedynie w formie współrzędnych jednorodnych. 
+
+$$
+\vec{P'}=
+\begin{bmatrix}
+1 & 0 & 0 & T_x \\
+0 & 1 & 0 & T_y \\
+0 & 0 & 1 & T_z \\
+0 & 0 & 0 & 1
+\end{bmatrix}
+*
+\begin{bmatrix}
+x \\
+y \\
+z \\
+1
+\end{bmatrix}
+=
+\begin{bmatrix}
+x+T_x \\
+y+T_y \\
+z+T_z \\
+1
+\end{bmatrix}
+$$
 \subsection{Rotacje i kwaterniony}
-Trzecią elementarną transformacją jest rotacja. W odróżnieniu od prostego skalowania czy translacji jest operacją bardziej złożoną. Po pierwsze kolejność wykonywania rotacji ma znaczenie ($R_1R_2\neq R_2R_1$), po drugie samych reprezentacji rotacji jest kilka. Najpopularniejszym z nich są obroty o zadany kąt wokół jednej z osi układu współrzędnych lub arbitralnej osi obrotu.
+Trzecią elementarną transformacją jest rotacja. W odróżnieniu od prostego skalowania czy translacji jest operacją bardziej złożoną. Po pierwsze kolejność wykonywania rotacji ma znaczenie ($R_xR_y\neq R_yR_x$), po drugie samych reprezentacji rotacji jest kilka. Najpopularniejszym z nich są obroty o zadany kąt wokół jednej z osi układu współrzędnych lub arbitralnej osi obrotu.
 
 Współrzędne punktu $P'=(x',y',z')$ będącego wynikiem rotacji o zadany kąt $\alpha$ wokół osi układu współrzędnych wyrażają się następująco:
 
@@ -244,50 +343,62 @@ z'=z
 \end{array}
 $$
 \\
+Reprezentacja rotacji we współrzędnych jednorodnych ma postać następujących macierzy:
+$$
+Rx(\alpha) = 
+\begin{bmatrix}
+1 & 0 & 0 & 0 \\
+0 & cos(\alpha) & -sin(\alpha) & 0 \\
+0 & sin(\alpha) & cos(\alpha) & 0 \\
+0 & 0 & 0 & 1
+\end{bmatrix}
+\begin{bmatrix}
+x \\
+y \\
+z \\
+1
+\end{bmatrix}
+$$
+$$
+Ry(\beta) = 
+\begin{bmatrix}
+cos(\beta) & 0 & sin(\beta) & 0 \\
+0 & 1 & 0 & 0 \\
+-sin(\beta) & 0 & cos(\beta) & 0 \\
+0 & 0 & 0 & 1
+\end{bmatrix}
+\begin{bmatrix}
+x \\
+y \\
+z \\
+1
+\end{bmatrix}
+$$
+$$
+Rz(\gamma) = 
+\begin{bmatrix}
+cos(\gamma) & -sin(\gamma) & 0 & 0 \\
+sin(\gamma) & cos(\gamma) & 0 & 0 \\
+0 & 0 & 1 & 0 \\
+0 & 0 & 0 & 1
+\end{bmatrix}
+\begin{bmatrix}
+x \\
+y \\
+z \\
+1
+\end{bmatrix}
+$$
+
+
 Wygodnym sposobem reprezentacji rotacji są kwaterniony. Kwaterniony zostały odkryte (wynalezione?) 
 
 \section{Przekształcenia macierzowe}
-Współcześnie wszelkie operacje graficzne, a w szczególności tranformacje są wykonywane na milionach punktów (pikseli). Bezpośrednia implementacja powyższych przekształceń byłaby dość kłopotliwa gdyż nie dość, że każda operacja musiałaby zostać wykonana oddzielnie, to jednak przede wszystkim nie byłoby to optymalne obliczeniowo rozwiązanie. Do tego celu opracowano ujednolicone narzędzie, doskonale spełniające zadanie: \textit{macierze przekształceń}.
 
-Macierze przekształceń stanowią łatwy sposób posługiwania się wszystkimi zdefiniowanymi transformacjami, a w szczególności: skalowaniem, translacją i rotacją. Każdą z powyższych operacji można opisać jako operacje macierzowe modyfikujące zbiór punktów w przestrzeni. 
-\\
-\\
-Elementarna rotacja jest rotacją danego punktu wokół jednej z osi układu współrzędnych ($X$, $Y$ lub $Z$).
-$$
-A=\begin{bmatrix}
-
-\end{bmatrix}
-$$
-
-
-$$
-T=\begin{bmatrix}
-t_x \\
-t_y \\
-t_z
-\end{bmatrix}
-$$
-
-
-Często także pojawia się sytuacja w której przekształcenia geometryczne są wykonywane jednocześnie. Można sobie wyobrazić sytuację w której obiekt przestrzenny należy przesunąć jednocześnie dokonując obrotu. 
-
-
-Macierze przekształceń powstały przede wszystkim z myślą o implementacji na współczesnych komputerach, które bardzo dobrze radzą sobie z obliczeniami macierzowymi. Istnieją dziesiątki rozmaitych bibliotek wspomagających tego typu kalkulacje, ponadto operacje macierzowe można łatwo zrównoleglać i optymalizować.
-
-Przykładowo mając dany wektor współrzędnych $\vec{X}$ opisujący położenie punktu w przestrzeni trójwymiarowej:
-
-$$
-\vec{X}=\begin{bmatrix}
-x \\
-y \\
-z
-\end{bmatrix}
-$$
-możemy zdefiniowac macierz $T(a,b,c)$:
 
 
 \section{Współrzędne jednorodne}
-Współrzędne jednorodne są sposobem reprezentacji punktów przestrzeni $n$-wymiarowej za pomocą układu $n+1$ współrzędnych. Zostały one wprowadzone przez niemieckiego matematyka Augusta Möbiusa w 1827 roku i opisane w jego pracy Der barycentrische Calcul. Möbius zauważył, że nie jest możliwe przedstawienie wszystkich transformacji geometrycznych za pomocą elementarnych macierzy transformacji. Aby rozwiązać ten problem opracowano właśnie współrzędne jednorodne. Zostały one docenione w dzisiejszych czasach szczególnie przez programistów grafiki komputerowej, gdyż same stanowią łatwe w implementacji narzędzie transformacji geometrycznych.
+
 
 
 
